[workspace]
members = [
    ".",
    "wiki-data",
    "wiki-data-cli",
]

[package]
name = "terratree"
version = "0.1.0"
authors = ["darkwater <dark@dark.red>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
default-run = "terratree"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe      = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui        = "0.29"
egui_extras = { version = "0.29.1", features = ["image"] }
image       = { version = "0.25.4", default-features = false, features = ["png", "webp", "jpeg"] }

wiki-data = { path = "wiki-data", features = ["images"] }

anyhow = "1.0.91"
heck   = "0.5.0"
log    = "0.4"
serde  = { version = "1.0.213", features = ["derive"] }
toml   = "0.8.19"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)
getrandom = { version = "0.2.15", features = ["js"] } # used by other crates, but js feature must be enabled for wasm

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
