[package]
name = "wiki-data"
version = "0.1.0"
edition = "2024"

[dependencies]
cint        = "0.3.1"
derive_more = { version = "2.1.1", features = ["try_from"] }
lazy_static = "1.5.0"
rmp-serde   = "1.3.0"
scraper     = "0.25.0"
serde       = { version = "1.0.213", features = ["derive"] }
serde_json  = "1.0.132"

[features]
default = ["items"]
items = []
images = []
