[package]
name = "wiki-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = "1.0.91"
async-std          = { version = "1.13.0", features = ["attributes"] }
clap               = { version = "4.5.20", features = ["derive"] }
derive_more        = { version = "1.0.0", features = ["try_from"] }
indicatif          = "0.17.8"
rand               = "0.8.5"
rmp-serde          = "1.3.0"
serde              = { version = "1.0.213", features = ["derive"] }
serde_json         = "1.0.132"
serde_with         = "3.11.0"
surf               = "2.3.2"
tracing            = "0.1.40"
tracing-indicatif  = "0.3.6"
tracing-subscriber = "0.3.18"
url                = "2.5.2"
